[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wttc"
version = "3.25"
description = "when the time comes (2021-24) for stage actor & six players"
authors = [{ name = "Trevor BaÄa", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = ["abjad>=3.25"]

[project.urls]
Homepage = "https://github.com/trevorbaca/wttc"

[tool.setuptools]
packages = ["wttc"]
package-dir = { "" = "source" }
